# ClearC-

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-cpp-qt.yml
docs/superpowers/plans/: 2026-07-01-cpp-qt-full-migration.md
src/: AccountStore.cpp  AccountStore.h  AmdAdlxBridge.cpp  AmdAdlxBridge.h  CleanupEngine.cpp  CleanupEngine.h  DismRuleScanner.cpp  DismRuleScanner.h  FileManagementEngine.cpp  FileManagementEngine.h  GpuOptimizationEngine.cpp  GpuOptimizationEngine.h  MainWindow.cpp  MainWindow.h  NvidiaNvapiBridge.cpp  NvidiaNvapiBridge.h  SoftwareUninstallEngine.cpp  SoftwareUninstallEngine.h  SystemCatalog.cpp  SystemCatalog.h  main.cpp
tests/: EngineBehaviorTests.cpp  test_cpp_qt_migration.py  test_final_prd_contract.py
